# Influenza

LibraryProject/: Makefile
LibraryProject/include/: SimulationRun.h  mpi_interface.h
LibraryProject/lib/: libFluSimulation.dylib
LibraryProject/src/: City.cpp  Flu_Manager.cpp  SimulationRun.cpp  mpi_interface.cpp
Parallel_Linux_OMP_sampling/: Business.cpp  Business.h  CMakeLists.txt  City.cpp  City.h  FluSimulation  Flu_Manager.cpp  Flu_Manager.h  Household.cpp  Household.h  Location.cpp  Location.h  Multi_City_44_Templates.h  Multi_City_Main.cpp  Person.cpp  Person.h  ReadMe  Run_0_City_no0_dailyStatistics.txt  Run_0_City_no2_R_Output.txt  Run_no0_number_daily_tested.txt  Run_no0_output_general_stats.txt  Run_no0_pandemic.txt  Run_no0_total.txt  Run_no0output_R.txt  SimulationRun.cpp  SimulationRun.h  makefile  output_R.txt  output_general_stats.txt  plot.py  regions.txt  sl.scr  slurm-32038659.out  workplaces_MI_region2_unscaled_Jan14.txt
RInterface2InfluenzaSimulations/: City.cpp  City.h  Flu_Manager.cpp  Household.cpp  Makevars  Multi_City_Main.cpp  Multi_City_Main.h  Person.cpp  SimulationRun.h  wrapper.cpp
RInterface2InfluenzaSimulations/RInterface/: main.R
TestWithLib/: LineGraph.cpp  LineGraph.h  Makefile  Multi_City_Main.cpp  cairo_draw.cpp  cairo_draw.h  interface_calls.cpp  interface_calls.h  interface_classes.h  interface_main.cpp  interface_main.h  simulation_calls.cpp  simulation_calls.h  style.css
TestWithLib/input_data/: constants.txt  workplaces.txt
TestWithLib/lib/: libFluSimulation.dylib
temp_gnu_plot/: gnu_test  main.cpp
